--- a/helloworld.html
+++ b/helloworld.html
@@ -1,1 +1,9 @@
-<h2>Hello World</h2>
+<!DOTYPE html>
+<html>
+<head>
+<title> hello world </title>
+</head>
+<body>
+<h2> Hello World </h2>
+</body>
+<html>
